#188 Like refactor